--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
     "format": "prettier --write \"{app,components,lib,hooks,context}/**/*.{ts,tsx}\""
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@playwright/test": "^1.42.1",
     "autoprefixer": "^10.4.19",
     "baseline-browser-mapping": "^2.9.19",
     "eslint": "^8.57.0",
